--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -118,6 +118,7 @@
     <string name="help_internet">има разрешение за интернет</string>
     <string name="help_granted">има разрешение в Android</string>
     <string name="help_used">използвало е тези данни</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">е деактивирано</string>
     <string name="help_dangerous">е опасно</string>
     <string name="help_half">partly restricted</string>
