--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -116,6 +116,7 @@
     <string name="help_internet">har internettilladelse</string>
     <string name="help_granted">har Android-tilladelse</string>
     <string name="help_used">har benyttet denne type data</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">er deaktiveret</string>
     <string name="help_dangerous">er farlig</string>
     <string name="help_half">partly restricted</string>
