--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -116,6 +116,7 @@
     <string name="help_internet">té permís d\'Internet</string>
     <string name="help_granted">té permisos d\'Android</string>
     <string name="help_used">ha utilitzat aquesta informació</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">està desactivat</string>
     <string name="help_dangerous">és perillós</string>
     <string name="help_half">partly restricted</string>
