--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -119,6 +119,7 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
     <string name="help_internet">má oprávnění k Internetu</string>
     <string name="help_granted">má Android oprávnění</string>
     <string name="help_used">přistupovala k těmto datům</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">je zakázaná</string>
     <string name="help_dangerous">je nebezpečná</string>
     <string name="help_half">partly restricted</string>
