--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -118,6 +118,7 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
     <string name="help_internet">ha permesso internet</string>
     <string name="help_granted">ha permesso Android</string>
     <string name="help_used">ha usato questi dati</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">è disabilitato</string>
     <string name="help_dangerous">è pericoloso</string>
     <string name="help_half">parzialmente limitato</string>
