--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -119,6 +119,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="help_internet">Interneto leidimai</string>
     <string name="help_granted">Android leidimai</string>
     <string name="help_used">Privačių duomenų leidimai</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">Išjungtų programų leidimai</string>
     <string name="help_dangerous">Pavojingi leidimai, apribojus, gali sukelti problemų</string>
     <string name="help_half">Iš dalies apribota</string>
