--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -118,6 +118,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="help_internet">Tem permissão da internet</string>
     <string name="help_granted">Tem permissão do Android</string>
     <string name="help_used">Tem usado estes dados</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">Está desativado</string>
     <string name="help_dangerous">É perigoso</string>
     <string name="help_half">partly restricted</string>
