--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -118,6 +118,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_internet">are permisiune Internet</string>
     <string name="help_granted">are permisiune Android</string>
     <string name="help_used">a utilizat aceste date</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">is dangerous</string>
     <string name="help_half">partly restricted</string>
