--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -130,6 +130,7 @@ however it is impossible to guarantee it will work flawlessly on each and every 
     <string name="help_internet">has internet permission</string>
     <string name="help_granted">has Android permission</string>
     <string name="help_used">has used this data</string>
+    <string name="help_used_grayed">no usage data available</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">is dangerous, restricting may cause problems</string>
     <string name="help_half">partly restricted</string>
