Make application description translatable
- translation in Chinese
- translation in Dutch

Closes #1060

--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy is niet ingeschakeld in de Xposed installer</string>
     <string name="app_wrongandroid">Alleen voor Android versie 4.0.3+</string>
     <string name="app_version" formatted="false">XPrivacy versie: %s (%d)</string>
+    <string name="app_description">De ultieme privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework versie: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Gebruik</string>
