--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">Není povolen modul XPrivacy v Xposed installeru</string>
     <string name="app_wrongandroid">Pouze pro Android verze 4.0+</string>
     <string name="app_version" formatted="false">Verze XPrivacy: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Verze Xposed frameworku: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Využití</string>
