--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy er ikke aktiveret i Xposed installer</string>
     <string name="app_wrongandroid">Kun til Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Ophavsret \u00A9 2013–2014 M. Bokhorst (M66B)</string>
     <string name="menu_usage">Brug</string>
