--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy ist im Xposed Installer nicht aktiviert</string>
     <string name="app_wrongandroid">Nur für Android-Version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy Version: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed Framework Version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Aktivitätslog</string>
