--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy ei ole aktiveeritud Xposed raamistiku installeerias</string>
     <string name="app_wrongandroid">See rakendus on ainult android 4.0+\'le </string>
     <string name="app_version" formatted="false">XPrivacy versioon: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed raamistiku versioon: %d</string>
     <string name="app_copyright">Autoriõigus \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Kasutus</string>
