--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">Το XPrivacy δεν είναι ενεργοποιημένο στο Xposed installer</string>
     <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">Έκδοση XPrivacy: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 M. Bokhorst (M66B)</string>
     <string name="menu_usage">Χρήση</string>
