--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -6,6 +6,7 @@
     <string name="app_notenabled"> نرم افزار ایکس پرایویسی در نصب کننده ی اکیس پوزد فعال نشده است</string>
     <string name="app_wrongandroid"> 4.0+ فقط برای اندروبد ورژن</string>
     <string name="app_version" formatted="false">%s (%d):نرم افزار ایکس پرایویسی ورژن </string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">%d :فریم ورک ایکس پرایویسی ورژن </string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">کاربرد</string>
