--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy n\'est pas activé dans l\'installateur Xposed</string>
     <string name="app_wrongandroid">Uniquement pour Android 4.0 et ultérieur</string>
     <string name="app_version" formatted="false">Version XPrivacy : %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Version de l\'environnement Xposed : %d</string>
     <string name="app_copyright">Droits d\'auteur : M. Bokhorst (M66B) \u00A9 2013–2014 </string>
     <string name="menu_usage">Usage</string>
