--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy non è abilitato nell\'installer di Xposed framework</string>
     <string name="app_wrongandroid">Solo per Android versione 4.0+</string>
     <string name="app_version" formatted="false">Versione di XPrivacy: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Versione di Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Utilizzo</string>
