--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy אינו מאופשר במתקין Xposed</string>
     <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy גירסא: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">גרסת מסגרת Xposed: %d</string>
     <string name="app_copyright">כל הזכויות שמורות \ u00A9 2013–2014 על ידי מ \'Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
