--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacyがXposedインストーラで有効になっていません</string>
     <string name="app_wrongandroid">Androidバージョン 4.0以降でのみを動作します</string>
     <string name="app_version" formatted="false">XPrivacy バージョン: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposedフレームワークバージョン: %d</string>
     <string name="app_copyright">著作権 \u00A9 2013–2014、 M. Bokhorst より(M66B)</string>
     <string name="menu_usage">利用履歴</string>
