--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy neaktyvuota Xposed programoje</string>
     <string name="app_wrongandroid">Tik nuo Android 4.0+ versijos</string>
     <string name="app_version" formatted="false">XPrivacy programos versija: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed programos versija: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     
