--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy nie został włączony w instalatorze Xposed</string>
     <string name="app_wrongandroid">Tylko dla Androida w wersji 4.0+</string>
     <string name="app_version" formatted="false">Wersja XPrivacy: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Wersja Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Log dostępu do danych</string>
