--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy није омогућен у Xposed инсталатору</string>
     <string name="app_wrongandroid">Only for Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy верзија: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework верзија: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="menu_usage">Usage</string>
