--- a/res/values-tl-rPH/strings.xml
+++ b/res/values-tl-rPH/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">Ang XPrivacy ay hindi gumagana sa Xposed na installer</string>
     <string name="app_wrongandroid">Para lang sa Android na salin 4.0.3+</string>
     <string name="app_version" formatted="false">XPrivacy na salin: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework na salin: %d</string>
     <string name="app_copyright">Ang karapatan \u00A9 2013–2014 nito ay pag-aari ni M. Bokhorst (M66B)</string>
     <string name="menu_usage">Kaalaman tungkol sa mga pahintulot na nagamit</string>
