--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_notenabled">XPrivacy, Xposed yükleyicisinden etkinleştirilmedi.</string>
     <string name="app_wrongandroid">Sadece Android 4.0 ve üstünde kullanılabilir.</string>
     <string name="app_version" formatted="false">XPrivacy versiyon: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework versiyon: %d</string>
     <string name="app_copyright">Telif hakkı \u00A9 2013–2014, M. Bokhorst (M66B)</string>
     <string name="menu_usage">Kullanım</string>
