--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="app_wrongandroid">Only for Android version 4.0.3+</string>
     <string name="app_wrongenabler" translatable="false">Please upgrade the Pro enabler</string>
     <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
+    <string name="app_description">The ultimate privacy manager</string>
     <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013–2014 by M. Bokhorst (M66B)</string>
     <string name="app_help" translatable="false">https://github.com/M66B/XPrivacy#xprivacy</string>
