--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -132,5 +132,6 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
 \nTap the app icon for detailed restrictions and settings</string>
     <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
     <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="permission_manage">Manage applications, including killing</string>
 
 </resources>
