--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -144,5 +144,6 @@ however it is impossible to guarantee it will work flawlessly on each and every 
 \nTap the app icon for detailed restrictions and settings</string>
     <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
     <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="permission_manage">Manage applications, including killing</string>
 
 </resources>
