--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -133,5 +133,6 @@ nicméně je nemožné zaručit bezchybnou funkčnost na všech zařízeních a 
 \nTap the app icon for detailed restrictions and settings</string>
     <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
     <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="permission_manage">Manage applications, including killing</string>
 
 </resources>
