--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -132,5 +132,6 @@
 \nTippen Sie auf das App-Icon für detaillierte Beschränkungen und Einstellungen</string>
     <string name="tutorial_detailsheader">Tippen Sie auf das App-Icon für weitere Aktionen</string>
     <string name="tutorial_detailslist">Tippen Sie auf den Pfeil, um die Ausnahmen-Funktionen von einer beschränkten Kategorie zu sehen</string>
+    <string name="permission_manage">Manage applications, including killing</string>
 
 </resources>
