--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -132,5 +132,6 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
 \nTap the app icon for detailed restrictions and settings</string>
     <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
     <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="permission_manage">Manage applications, including killing</string>
 
 </resources>
