--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -132,5 +132,6 @@ ma è impossibile garantire che funzionerà in modo impeccabile su ogni disposit
 \nTap the app icon for detailed restrictions and settings</string>
     <string name="tutorial_detailsheader">Tap the app icon for more actions</string>
     <string name="tutorial_detailslist">Tap the down arrow to see the function exceptions of a restriction category</string>
+    <string name="permission_manage">Manage applications, including killing</string>
 
 </resources>
