--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -25,7 +25,7 @@
     <string name="menu_clear_all">Tout effacer</string>
     <string name="menu_restrict_all">Tout restreindre</string>
     <string name="menu_clear_usage">Effacer</string>
-    <string name="menu_usage_all">Basculer tout/restreintes uniquement</string>
+    <string name="menu_usage_all">Basculer toutes/restreintes</string>
     <string name="menu_apply">Appliquer le modèle</string>
     <string name="menu_clear">Effacer</string>
     <string name="menu_app_launch">Lancer</string>
@@ -109,12 +109,12 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="settings_fake_data">Fausses données</string>
     <string name="settings_global">Utiliser les valeurs globales</string>
     <string name="settings_notify">Notifications de MàJ</string>
-    <string name="settings_usage">Activer usage log (redémarrage nécessaire)</string>
-    <string name="settings_log">Debug log (redémarrage nécessaire)</string>
+    <string name="settings_usage">Activer usage log (redémarrage requis)</string>
+    <string name="settings_log">Debug log (redémarrage requis)</string>
     <string name="settings_expert">Mode expert</string>
     <string name="settings_dangerous">Restreindre fonctions dangereuses</string>
-    <string name="settings_confidence">Maximum fetch confidence interval</string>
-    <string name="settings_experimental">Fonctions expérimentales (redémarrage nécessaire)</string>
+    <string name="settings_confidence">Intervalle de confiance maximum</string>
+    <string name="settings_experimental">Fonctions expérimentales (redémarrage requis)</string>
     <string name="help_application">Application</string>
     <string name="help_internet">a les permissions Internet</string>
     <string name="help_granted">a les permissions Android</string>
@@ -125,9 +125,9 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="help_half">partiellement restreinte</string>
     <string name="help_attention">des restrictions ont besoin d\'attention</string>
     <string name="help_restricted">des restrictions sont changées</string>
-    <string name="help_shared">des restrictions sont envoyées</string>
+    <string name="help_shared">les restrictions sont envoyées</string>
     <string name="tutorial_mainheader">Choisir la catégorie à restreindre; choisir les applis à afficher avec les filtres</string>
-    <string name="tutorial_mainlist">Appuyer sur une case à cocher pour restreindre la catégorie choisie pour l’appli\n
+    <string name="tutorial_mainlist">Cocher une case pour restreindre la catégorie choisie pour l’appli\n
 \nL’appli sera dupée par des données vides ou modifiées\n
 \nAppuyer sur l’icône de l’appli pour les restrictions détaillées et les paramètres</string>
     <string name="tutorial_detailsheader">Appuyer sur l’icône pour plus d’actions</string>
